--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <fieldset class="form__fieldset">
                 <p class="form__info">
-                    Informacja o poborze danych ze strony
+                    Kursy walut z tabeli nr 120/A/NBP/2023 z dnia 2023-06-23 
                 </p>
                 <p class="js-result form__result">
                 </p>
