--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
     <script defer src="js/script.js"></script>
     <title> Kalkulator walut</title>
+    <meta property="og:image" content="images/OpenGraph.png">
 </head>
 
 <body>
