--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script defer src="js/script.js"></script>
     <title> Kalkulator walut</title>
     <meta property="og:image" content="images/OpenGraph.png">
+    <link rel="icon" href="images/icon.png"> 
 </head>
 
 <body>
